--- a/date/2025-09/index.htm
+++ b/date/2025-09/index.htm
@@ -273,16 +273,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-15-free-ssr-subscribe.htm" title="10月15日→20.7M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐">10月15日→20.7M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-20-free-subscribe-node.htm" title="9月20日→22.6M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐">9月20日→22.6M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-19-clash-node-daily-updates.htm" title="9月19日→19.4M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">9月19日→19.4M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-11-free-node-subscribe-links.htm" title="9月11日→18.8M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐">9月11日→18.8M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-10-shadowrocket-node.htm" title="10月10日→18.9M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐">10月10日→18.9M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-25-free-ssr-subscribe.htm" title="9月25日→18.2M/S|2025最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址|免费订阅|免费梯子每天更新">9月25日→18.2M/S|2025最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址|免费订阅|免费梯子每天更新</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-11-node-share-links.htm" title="10月11日→18M/S|2025年最新免费节点V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点订阅链接地址，便宜机场推荐">10月11日→18M/S|2025年最新免费节点V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-free-clash.htm" title="9月15日→19.6M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">9月15日→19.6M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-9-free-ssr-subscribe.htm" title="9月9日→18.2M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR/V2ray订阅链接地址，便宜机场推荐">9月9日→18.2M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-14-free-clash.htm" title="10月14日→21.1M/S|2025年最新免费节点Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅链接地址，便宜机场推荐">10月14日→21.1M/S|2025年最新免费节点Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-6-free-v2ray-subscribe.htm" title="10月6日→19.6M/S|2025年最新免费节点V2ray节点/Clash节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐">10月6日→19.6M/S|2025年最新免费节点V2ray节点/Clash节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-node-share.htm" title="9月13日→21.5M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐">9月13日→21.5M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-24-clash-node.htm" title="9月24日→19.3M/S|2025最新免费节点Clash节点/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点订阅链接地址|免费订阅|免费梯子每天更新">9月24日→19.3M/S|2025最新免费节点Clash节点/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点订阅链接地址|免费订阅|免费梯子每天更新</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-10-shadowrocket-node.htm" title="10月10日→18.9M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐">10月10日→18.9M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-22-free-high-speed-nodes.htm" title="10月22日→22.1M/S|2025年最新免费节点SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点订阅链接地址，便宜机场推荐">10月22日→22.1M/S|2025年最新免费节点SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-21-free-ssr-node.htm" title="9月21日→22.5M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">9月21日→22.5M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-1-free-ssr-subscribe.htm" title="10月1日→21.6M/S|2025年最新免费节点Clash节点/Singbox节点/Shadowrocket节点/V2ray节点/SSR节点订阅链接地址，便宜机场推荐">10月1日→21.6M/S|2025年最新免费节点Clash节点/Singbox节点/Shadowrocket节点/V2ray节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-28-free-clash.htm" title="9月28日→18.1M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点订阅链接地址，便宜机场推荐">9月28日→18.1M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-17-node-share-links.htm" title="10月17日→19.8M/S|2025年最新免费节点V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点订阅链接地址，便宜机场推荐">10月17日→19.8M/S|2025年最新免费节点V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -294,7 +294,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
