--- a/free-nodes/2025-10-19-free-v2ray-subscribe.htm
+++ b/free-nodes/2025-10-19-free-v2ray-subscribe.htm
@@ -317,6 +317,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                 <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-10-18-clash-windows.htm">10月18日→18.6M/S|2025年最新免费节点Singbox节点/Clash节点/V2ray节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-10-20-free-node-subscribe.htm">10月20日→19.9M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -345,16 +346,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-27-free-subscribe-node.htm" title="9月27日→22.3M/S|2025年最新免费节点SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐">9月27日→22.3M/S|2025年最新免费节点SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-ssr-subscribe.htm" title="9月9日→18.2M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR/V2ray订阅链接地址，便宜机场推荐">9月9日→18.2M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-23-free-v2ray-subscribe.htm" title="9月23日→21.4M/S|2025年最新免费节点V2ray节点/Shadowrocket节点/Clash节点/SSR订阅链接地址，便宜机场推荐">9月23日→21.4M/S|2025年最新免费节点V2ray节点/Shadowrocket节点/Clash节点/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-1-free-ssr-subscribe.htm" title="10月1日→21.6M/S|2025年最新免费节点Clash节点/Singbox节点/Shadowrocket节点/V2ray节点/SSR节点订阅链接地址，便宜机场推荐">10月1日→21.6M/S|2025年最新免费节点Clash节点/Singbox节点/Shadowrocket节点/V2ray节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-26-node-share-links.htm" title="9月26日→20.8M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐">9月26日→20.8M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-20-free-subscribe-node.htm" title="9月20日→22.6M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐">9月20日→22.6M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-10-free-high-speed-nodes.htm" title="9月10日→18M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐">9月10日→18M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-12-clash-windows.htm" title="10月12日→19M/S|2025年最新免费节点V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点订阅链接地址，便宜机场推荐">10月12日→19M/S|2025年最新免费节点V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-25-free-ssr-subscribe.htm" title="9月25日→18.2M/S|2025最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址|免费订阅|免费梯子每天更新">9月25日→18.2M/S|2025最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址|免费订阅|免费梯子每天更新</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-11-node-share-links.htm" title="10月11日→18M/S|2025年最新免费节点V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点订阅链接地址，便宜机场推荐">10月11日→18M/S|2025年最新免费节点V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-21-free-ssr-node.htm" title="9月21日→22.5M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">9月21日→22.5M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-12-clash-windows.htm" title="10月12日→19M/S|2025年最新免费节点V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点订阅链接地址，便宜机场推荐">10月12日→19M/S|2025年最新免费节点V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-5-clash-node-daily-updates.htm" title="10月5日→19.5M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐">10月5日→19.5M/S|2025年最新免费节点Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-24-free-ssr-node.htm" title="10月24日→18.8M/S|2025年最新免费节点V2ray节点/SSR节点/Singbox节点/Clash节点/Shadowrocket节点订阅链接地址，便宜机场推荐">10月24日→18.8M/S|2025年最新免费节点V2ray节点/SSR节点/Singbox节点/Clash节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-15-free-ssr-subscribe.htm" title="10月15日→20.7M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐">10月15日→20.7M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-11-free-node-subscribe-links.htm" title="9月11日→18.8M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐">9月11日→18.8M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-14-free-clash.htm" title="10月14日→21.1M/S|2025年最新免费节点Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅链接地址，便宜机场推荐">10月14日→21.1M/S|2025年最新免费节点Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-shadowrocket-node.htm" title="9月18日→21.9M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐">9月18日→21.9M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-9-free-node-subscribe.htm" title="10月9日→22.6M/S|2025年最新免费节点V2ray节点/SSR节点/Clash节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐">10月9日→22.6M/S|2025年最新免费节点V2ray节点/SSR节点/Clash节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -366,7 +367,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
