--- a/free-nodes/page-5.htm
+++ b/free-nodes/page-5.htm
@@ -123,6 +123,90 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2025-09-15">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-9-15-free-clash.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/cc93aa4b19cc04eb52a9aba9ef1e6db7.webp" alt="9月15日→19.6M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-9-15-free-clash.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">9月15日→19.6M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了香港、新加坡、日本、韩国、美国、欧洲、加拿大等地区,最高速度可达19.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                                    <div class="welcome xcblog-blog-item" data-date="2025-09-14">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-9-14-shadowrocket-node.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/27ea0bf4af43099050c87da981096f79.webp" alt="9月14日→22M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-9-14-shadowrocket-node.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">9月14日→22M/S|2025年最新免费节点V2ray节点/SSR/Shadowrocket节点/Clash订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了美国、加拿大、新加坡、欧洲、日本、韩国、香港等地区,最高速度可达22 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                                    <div class="welcome xcblog-blog-item" data-date="2025-09-13">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-9-13-node-share.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/c38971d27f34eb1a1231acac753c4fee.webp" alt="9月13日→21.5M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-9-13-node-share.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">9月13日→21.5M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了美国、日本、欧洲、加拿大、新加坡、香港、韩国等地区,最高速度可达21.5 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                                    <div class="welcome xcblog-blog-item" data-date="2025-09-12">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-9-12-free-ssr-node.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/b689047df3c43c67dc5627978a2159c3.webp" alt="9月12日→18.9M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-9-12-free-ssr-node.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">9月12日→18.9M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了日本、韩国、美国、香港、加拿大、欧洲、新加坡等地区,最高速度可达18.9 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                                    <div class="welcome xcblog-blog-item" data-date="2025-09-11">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-9-11-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/1fe0e21ba1fc7b2413c5b6e668710c60.webp" alt="9月11日→18.8M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-9-11-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">9月11日→18.8M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了新加坡、加拿大、韩国、日本、欧洲、香港、美国等地区,最高速度可达18.8 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                                    <div class="welcome xcblog-blog-item" data-date="2025-09-10">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-9-10-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/7ddf641cb9c3a427b5c3f54540cf62b6.webp" alt="9月10日→18M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-9-10-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">9月10日→18M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了加拿大、日本、韩国、新加坡、欧洲、香港、美国等地区,最高速度可达18 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2025-09-09">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2025-9-9-free-ssr-subscribe.htm" class="xcblog-blog-url">
@@ -175,16 +259,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-6-free-v2ray-subscribe.htm" title="10月6日→19.6M/S|2025年最新免费节点V2ray节点/Clash节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐">10月6日→19.6M/S|2025年最新免费节点V2ray节点/Clash节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-1-free-ssr-subscribe.htm" title="10月1日→21.6M/S|2025年最新免费节点Clash节点/Singbox节点/Shadowrocket节点/V2ray节点/SSR节点订阅链接地址，便宜机场推荐">10月1日→21.6M/S|2025年最新免费节点Clash节点/Singbox节点/Shadowrocket节点/V2ray节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-13-node-share.htm" title="9月13日→21.5M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐">9月13日→21.5M/S|2025年最新免费节点Clash节点/SSR/V2ray节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-18-shadowrocket-node.htm" title="9月18日→21.9M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐">9月18日→21.9M/S|2025年最新免费节点V2ray节点/SSR/Clash节点/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-10-free-high-speed-nodes.htm" title="9月10日→18M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐">9月10日→18M/S|2025年最新免费节点Clash节点/V2ray节点/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-15-free-clash.htm" title="9月15日→19.6M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐">9月15日→19.6M/S|2025年最新免费节点Clash节点/Shadowrocket节点/V2ray节点/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-16-free-node-subscribe-links.htm" title="10月16日→20.8M/S|2025年最新免费节点Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅链接地址，便宜机场推荐">10月16日→20.8M/S|2025年最新免费节点Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-8-free-high-speed-nodes.htm" title="10月8日→22.5M/S|2025年最新免费节点SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐">10月8日→22.5M/S|2025年最新免费节点SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-18-clash-windows.htm" title="10月18日→18.6M/S|2025年最新免费节点Singbox节点/Clash节点/V2ray节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐">10月18日→18.6M/S|2025年最新免费节点Singbox节点/Clash节点/V2ray节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-free-clash.htm" title="9月16日→22.1M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR/V2ray订阅链接地址，便宜机场推荐">9月16日→22.1M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-30-free-subscribe-node.htm" title="9月30日→19.3M/S|2025年最新免费节点Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐">9月30日→19.3M/S|2025年最新免费节点Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-20-free-subscribe-node.htm" title="9月20日→22.6M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐">9月20日→22.6M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-12-clash-windows.htm" title="10月12日→19M/S|2025年最新免费节点V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点订阅链接地址，便宜机场推荐">10月12日→19M/S|2025年最新免费节点V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-13-free-v2ray-subscribe.htm" title="10月13日→23M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点订阅链接地址，便宜机场推荐">10月13日→23M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-24-clash-node.htm" title="9月24日→19.3M/S|2025最新免费节点Clash节点/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点订阅链接地址|免费订阅|免费梯子每天更新">9月24日→19.3M/S|2025最新免费节点Clash节点/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点订阅链接地址|免费订阅|免费梯子每天更新</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-10-shadowrocket-node.htm" title="10月10日→18.9M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐">10月10日→18.9M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-7-free-node-subscribe.htm" title="9月7日→18.8M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/SSR/Clash订阅链接地址，便宜机场推荐">9月7日→18.8M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-27-free-subscribe-node.htm" title="9月27日→22.3M/S|2025年最新免费节点SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐">9月27日→22.3M/S|2025年最新免费节点SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -196,7 +280,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
